# BackupHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/alerts/: notifier.py
app/api/: auth.py  jobs.py  pages.py  runs.py  settings.py  storages.py
app/core/: app_settings.py  crypto.py  runner.py  scheduler.py
app/db/: models.py  session.py
app/executors/: base.py  git.py  registry.py
app/storages/: base.py  local.py  oss.py  registry.py  webdav.py
app/web/templates/: base.html  index.html  job_form.html  jobs.html  login.html  run_detail.html  runs.html  settings.html  storage_form.html  storages.html
deploy/: README.md  backup-hub.service  install-service.bat
scripts/: configure_webdav.py  init_db.py
tests/: test_api_validation.py  test_app_settings.py  test_git_executor.py  test_runner_errors.py
